Completed skills and download link.

--- a/css/resume.css
+++ b/css/resume.css
@@ -214,6 +214,14 @@ p {
  color: grey;
 }
 
+.side-text {
+  text-transform: capitalize;
+  font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-size: 0.9em;
+  font-weight: initial;
+  color: grey;
+ }
+
 .project-stack {
  margin-top:0;
  padding:0;
